# PaperPulse

./: .gitignore  README.md  config.example.yaml  pyproject.toml  run.sh
scripts/: run_daily.sh  run_research.sh
src/paperpulse/: __init__.py  cli.py  config.py
src/paperpulse/analysis/: __init__.py  llm_client.py  paper_analyzer.py  trend_detector.py
src/paperpulse/collectors/: arxiv.py  base.py  papers_with_code.py  semantic_scholar.py
src/paperpulse/converter/: __init__.py  mineru.py
src/paperpulse/downloader/: __init__.py  pdf.py
src/paperpulse/ideas/: __init__.py  generator.py  scorer.py
src/paperpulse/integration/: __init__.py  researchclaw.py  scheduler.py
src/paperpulse/output/: __init__.py  markdown.py  notion.py  obsidian.py  synthesis.py
src/paperpulse/storage/: __init__.py  database.py  models.py
src/paperpulse/utils/: __init__.py
